--- a/noticias.html
+++ b/noticias.html
@@ -17,6 +17,9 @@
   <!-- Link para CSS -->
   <link rel="stylesheet" href="noticia.css">
 
+  <link rel="shortcut icon" href="img/Logo ping(favicon).png" type="image/x-icon">
+
+
   <title>Conteúdo</title>
 </head>
 <body>
