--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 
-    
+    <link rel="shortcut icon" href="img/Logo ping(favicon).png" type="image/x-icon">
     
     <title>Ping</title>
 </head>
