--- a/review3.html
+++ b/review3.html
@@ -17,6 +17,8 @@
   <!-- Link para CSS -->
   <link rel="stylesheet" href="review.css">
 
+  <link rel="shortcut icon" href="img/Logo ping(favicon).png" type="image/x-icon">
+
   <title>Conteúdo</title>
 </head>
 <body>
