--- a/review_2.html
+++ b/review_2.html
@@ -16,6 +16,8 @@
 
   <!-- Link para CSS -->
   <link rel="stylesheet" href="review.css">
+  <link rel="shortcut icon" href="img/Logo ping(favicon).png" type="image/x-icon">
+
 
   <title>Conteúdo</title>
 </head>
